Sat Nov 12 11:18:17 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb (test_fcntl_lock_freebsd): add a testcase
	  of fcntl lock for freebsd.

Sat Nov 12 11:16:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (ioctl_narg_len): Linux doesn't have IOCPARM_LEN macro, but
	  has _IOC_SIZE. support it.

Sat Nov 12 11:13:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_ioctl): don't expose our sanity check value to ruby script.
	  It may change string value meaning if the value is string.
	  (e.g. MacOS X has  F_GETPATH ioctl)
	* io.c (rb_fcntl): ditto.

Sat Nov 12 11:06:02 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (ioctl_req_t): Type of req argument of ioctl() depend on platform.
	  Moreover almost all linux ioctl can't be represented by 32bit integer
	  (i.e. MSB is 1). We need wrap ioctl argument type.
	[Bug #5429] [ruby-dev:44589]
	* io.c (struct ioctl_arg): ditto.
	* io.c (rb_ioctl): ditto.
	* test/ruby/test_io.rb (test_ioctl_linux): add a testcase for ioctl

Sat Nov 12 11:00:42 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (struct io_cntl_arg): remove io_p member.
	* io.c (nogvl_fcntl, do_fcntl, rb_fcntl): separated from ioctl functions.
	* io.c (nogvl_io_cntl): remove fcntl depended logic.
	* io.c (io_cntl): ditto.
	* io.c (rb_io_ctl): ditto.
	* io.c (rb_io_ioctl): ditto.

Sat Nov 12 10:59:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (setup_narg): fix off by one bug.

Sat Nov 12 10:56:43 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (+setup_narg): factor out length calculation logic.
	* io.c (rb_io_ctl): ditto.

Sat Nov 12 10:52:17 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (+ioctl_narg_len) new helper function.
	* io.c (rb_io_ctl): don't use ioctl specific length check
	  if caller is fcntl.

Fri Nov 11 23:00:46 2011  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/extconf.rb: db_prefix is not required now.
